[package]
name = "tch_distr"
version = "0.1.1"
authors = ["bold <bold@cryptoguru.com>", "dpuyosa"]
edition = "2021"

description = "Rust equivalent torch.distributions."
repository = "https://github.com/spebern/tch-distr-rs"
keywords = ["pytorch", "deep-learning", "machine-learning", "distribution"]
categories = ["science"]
license = "MIT/Apache-2.0"
readme = "README.md"

[dependencies]
tch = "0.14.0"

[dev-dependencies]
numpy = "0.20.0"
ndarray = "0.15.3"
pyo3 = { version = "0.20.0", features = ["macros", "auto-initialize"] }
serial_test = "2.0.0"
